--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/styles.css">
     </head>
-    <body>
-        <h1>Test</h1>
+    <body class="background">
     </body>
+
+    <div class="navBar">
+        <img src="assets/Logo.png" alt="Book Wyrm Logo" class="logo">
+        <ul>
+            <li><a href=""><img src="assets/NavBar/Dashboard.png" alt="Dashboard">Dashboard</a></li>
+            <li><a href=""><img src="assets/NavBar/ManageBooks.png" alt="Manage Books">Manage Books</a></li>
+            <li><a href=""><img src="assets/NavBar/ManagePatrons.png" alt="Manage Patrons">Manage Patrons</a></li>
+            <li><a href=""><img src="assets/NavBar/Reservations.png" alt="Reservations">Reservations</a></li>
+            <li><a href=""><img src="assets/NavBar/Payments.png" alt="Payments/Fines">Payments/Fines</a></li>
+            <li><a href=""><img src="assets/NavBar/Settings.png" alt="Settings">Settings</a></li>
+        </ul>
+    </div>
 </html>
