Finished basic NavBar styles

--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
-    <body class="background">
-    </body>
-
     <div class="navBar">
         <img src="assets/Logo.png" alt="Book Wyrm Logo" class="logo">
         <ul>
-            <li><a href=""><img src="assets/NavBar/Dashboard.png" alt="Dashboard">Dashboard</a></li>
+            <li><a href="" class="activePage"><img src="assets/NavBar/Dashboard.png" alt="Dashboard">Dashboard</a></li>
             <li><a href=""><img src="assets/NavBar/ManageBooks.png" alt="Manage Books">Manage Books</a></li>
             <li><a href=""><img src="assets/NavBar/ManagePatrons.png" alt="Manage Patrons">Manage Patrons</a></li>
             <li><a href=""><img src="assets/NavBar/Reservations.png" alt="Reservations">Reservations</a></li>
@@ -24,4 +21,9 @@
             <li><a href=""><img src="assets/NavBar/Settings.png" alt="Settings">Settings</a></li>
         </ul>
     </div>
+    <body class="background">
+        <h1>test</h1>
+    </body>
+
+
 </html>
