--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
-    
+<!--     
     <div class="navBar">
         <img src="assets/Logo.png" alt="Book Wyrm Logo" class="logo">
         <ul>
@@ -20,9 +20,27 @@
             <li><a href="/pages/reservations.html"><img src="assets/NavBar/Reservations.png" alt="Reservations">Reservations</a></li>
             <li><a href="/pages/fines.html"><img src="assets/NavBar/Payments.png" alt="Payments/Fines">Payments/Fines</a></li>
         </ul>
-    </div>
+    </div> -->
+
     <body class="background">
-        <h1>test</h1>
+        <div class="tableBackground">
+            <table>
+                <thead>
+                  <tr>
+                    <th>Book Title</th>
+                    <th>ISBN</th>
+                    <th>Customer</th>
+                    <th>Checkout Date</th>
+                    <th>Due Date</th>
+                    <th>Amount Date</th>
+                  </tr>
+                </thead>
+                <tbody>
+                    
+                </tbody>
+              </table>
+        </div>
+
     </body>
 
 
