--- a/index.html
+++ b/index.html
@@ -32,11 +32,82 @@
                     <th>Customer</th>
                     <th>Checkout Date</th>
                     <th>Due Date</th>
-                    <th>Amount Date</th>
+                    <th>Amount Due</th>
                   </tr>
                 </thead>
                 <tbody>
-                    
+                    <tr>
+                        <th>"..."</th>
+                        <th class="ISBN">0000000000000</th>
+                        <th>Jacob Marcus</th>
+                        <th>11/15/2024</th>
+                        <th>11/29/2024</th>
+                        <th>$000</th>
+                    </tr>
+                    <tr>
+                        <th>"..."</th>
+                        <th class="ISBN">0000000000000</th>
+                        <th>Jacob Marcus</th>
+                        <th>11/15/2024</th>
+                        <th>11/29/2024</th>
+                        <th>$000</th>
+                    </tr>
+                    <tr>
+                        <th>"..."</th>
+                        <th class="ISBN">0000000000000</th>
+                        <th>Jacob Marcus</th>
+                        <th>11/15/2024</th>
+                        <th>11/29/2024</th>
+                        <th>$000</th>
+                    </tr>
+                    <tr>
+                        <th>"..."</th>
+                        <th class="ISBN">0000000000000</th>
+                        <th>Jacob Marcus</th>
+                        <th>11/15/2024</th>
+                        <th>11/29/2024</th>
+                        <th>$000</th>
+                    </tr>
+                    <tr>
+                        <th>"..."</th>
+                        <th class="ISBN">0000000000000</th>
+                        <th>Jacob Marcus</th>
+                        <th>11/15/2024</th>
+                        <th>11/29/2024</th>
+                        <th>$000</th>
+                    </tr>
+                    <tr>
+                        <th>"..."</th>
+                        <th class="ISBN">0000000000000</th>
+                        <th>Jacob Marcus</th>
+                        <th>11/15/2024</th>
+                        <th>11/29/2024</th>
+                        <th>$000</th>
+                    </tr>
+                    <tr>
+                        <th>"..."</th>
+                        <th class="ISBN">0000000000000</th>
+                        <th>Jacob Marcus</th>
+                        <th>11/15/2024</th>
+                        <th>11/29/2024</th>
+                        <th>$000</th>
+                    </tr>
+                    <tr>
+                        <th>"..."</th>
+                        <th class="ISBN">0000000000000</th>
+                        <th>Jacob Marcus</th>
+                        <th>11/15/2024</th>
+                        <th>11/29/2024</th>
+                        <th>$000</th>
+                    </tr>
+                    <tr>
+                        <th>"..."</th>
+                        <th class="ISBN">0000000000000</th>
+                        <th>Jacob Marcus</th>
+                        <th>11/15/2024</th>
+                        <th>11/29/2024</th>
+                        <th>$000</th>
+                    </tr>
                 </tbody>
               </table>
         </div>
